Berichtigung der NO_NANO Option in DisplayValue wegen neuer femto "f" Einheit.
Verhindern des Quarztests für größere Kapazitäten.
Quarztest mit Option WITH_XTAL .
Unterstützung von Textdisplays mit anderer DD-RAM Adresse mit der Option DD_RAM_OFFSET=128 .
Verlegung der Messung der Kapazität des Kondensators für die Spulenmessung an das Ende der Kalibration.
Tausch von Counter1 compare match Interrupts wegen samplingADC (benutzt Counter1 compare match A mit).
Menü-Auswahl wird bis zu 6 Zeilen lang, wenn Platz auf dem Display ausreicht.
Überschreiben der Transistor-Icons bei 6x8 und 8x8 Font vermieden.
Optionsbits der samplingADC Funktion anders definiert, damit auch Assembler die Definitionen benutzt.
Funktion samplingADC für 8 MHz angepasst.
Funktion samplingADC für erhöhte Auflösung von Kapazitätsmessung von Pieter-Tjerk (16 MHz).
Problem mit DC_Pwr_mode in Sonderfunktions-Schleifen beseitigt.
Neuer Menüfunktion zum Setzen des Korrekturwertes für große Kapazitätswerte, C_H_KORR .
Kleine Korrekturen, besonders bei Kommentaren.
Die ADC-Ports für die Testfunktion können auch nicht bei 0 beginnen (- TP1).
Neue Organisation der Ausgabe zur Beschleunigung der Ausgabe (Menüfunktion).
Mehr Zeilenwechsel und Leerzeichen für die serielle Ausgabe
Erweiterung für 128x128 und 128x160 pixel Farbdisplay mit SPI Schnittstelle.
Erweiterung für 3-zeiliges DOGM LCD.
Überarbeitung der lcd_init Befehlsfolge für DOG-M (4-line, hflip, vflip).
Serielle Ausgabe für SSD1803 Controller MODE_1803_SERIAL=7 .
Wahlmöglichkeit für Schnittstelle bei Textdisplay (4-Bit parallel, SPI und I2C).
Neue Option LCD_ST7565_Y_START set eine Startzeile für den ST7565/ST7108/SSD1306/ST7920 Controller
Unterstützung des 3-line seriell Interfaces für den PCF8814 Controller.
Unterstützung für Displays mit PCF8812 und PCF8814 Controllern.
Option LCD_SPI_OPEN_COL für SPI Schnittstelle ohne direktes VCC Signal, nur Pull-Up.
Angabe Flußspannung der Schutzdiode von Transistoren auch für ATmega168.