@@ -1,3 +1,4 @@
+Drehencoder-Test bei Mega328 nur mit Option WITH_ROTARX_CHECK.
 Berichtigung der NO_NANO Option in DisplayValue wegen neuer femto "f" Einheit.
 Verhindern des Quarztests für größere Kapazitäten.
 Quarztest mit Option WITH_XTAL .
